# cch23

./: .env  Cargo.toml  README.md  Shuttle.toml  output
.sqlx/: query-136809b65377d962a2cc6dcd37e2c478925c1f91aa127aacf1fa7f8f05a684d6.json  query-36f89a203d2559c1220e3c494fb0f7e839761fa8880fc4eb6f7f4a885b1599c8.json  query-4ffaa971a8c4dbde85eb56877a5604fe284df6041fdb6b3db0ff225f7f7c638c.json  query-538eb15b4b1734220cfc5637596df386cef5e09eecb82ffe96dc5e885fa08823.json  query-89ad26fdec78be3b109680ea0be35f31416ffddc21a134fd15cb748cae6258b5.json  query-a109d8129788efd09047d40f5004cf4eaefea578468577deffb83fd7032c5d2a.json  query-c54ee7f1d266aa700f4187a8baba69b9854c7cf71a69ccd844fd5e4728b4a9e7.json  query-cea954eb14246bdc683bc1d7f89b866672bebd33ce2598f6c8dba928fd050697.json
migrations/: 20240916191759_create_regions.up.sql
scripts/: init_db.sh
src/: error.rs  main.rs
src/day1/: mod.rs
src/day11/: mod.rs
src/day12/: mod.rs
src/day13/: mod.rs
src/day14/: mod.rs
src/day15/: mod.rs
src/day18/: mod.rs
src/day19/: mod.rs
src/day20/: mod.rs
src/day21/: mod.rs
src/day22/: mod.rs
src/day4/: mod.rs
src/day5/: mod.rs
src/day6/: mod.rs
src/day7/: mod.rs
src/day8/: mod.rs
templates/: index.html
