[package]
name = "cch23"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
axum = { version = "0.7.4", features = ["macros", "multipart"] }
base64 = "0.22.1"
chrono = "0.4.38"
image = "0.25.2"
reqwest = "0.12.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
tokio = "1.28.2"
tower-http = { version = "0.5.2", features = ["fs"] }
ulid = { version = "1.1.3", features = ["uuid"] }
uuid = "1.10.0"
