[package]
name = "cch23"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.4", features = ["macros", "multipart", "ws"] }
base64 = "0.22.1"
bytes = "1.7.2"
chrono = "0.4.38"
emojito = "0.3.5"
fancy-regex = "0.13.0"
futures = "0.3.30"
git2 = "0.19.0"
hex = "0.4.3"
image = "0.25.2"
reqwest = "0.12.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
shuttle-shared-db = { version = "0.47.0", features = ["postgres", "sqlx"] }
sqlx = "0.7.1"
tar = "0.4.41"
tempfile = "3.12.0"
tokio = "1.28.2"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = { version = "0.1.40", features = ["attributes"] }
ulid = { version = "1.1.3", features = ["uuid"] }
uuid = "1.10.0"
